@@ -3,12 +3,12 @@
 
 [editor2_tool_hint]
     id="editor-tool-paint"
-    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold ALT to paint base layer only"
+    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only"
 [/editor2_tool_hint]
 
 [editor2_tool_hint]
     id="editor-tool-fill"
-    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold ALT to paint base layer only"
+    text= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only"
 [/editor2_tool_hint]
 
 [editor2_tool_hint]
