@@ -3,6 +3,9 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.5.5+svn:
+  * Editor2
+    * changed the base-terrain key modifier to shift from alt.
+
   * Language and translations
     * updated translations: Galician, German.
 
